# cuga-agent

./: .dockerignore  Dockerfile  README.md  pyproject.toml
docs/examples/cuga_as_mcp/: pyproject.toml
docs/examples/cuga_with_runtime_tools/: pyproject.toml
docs/examples/demo_apps/email_mcp/mcp_server/: server.py
docs/examples/huggingface/: email_template.md
src/cuga/: config.py  settings.toml
src/cuga/backend/cuga_graph/nodes/cuga_lite/: __init__.py  combined_tool_provider.py  cuga_agent_base.py  cuga_lite_node.py  tool_registry_provider.py
src/cuga/backend/cuga_graph/nodes/cuga_lite/prompts/: mcp_prompt.jinja2
src/cuga/backend/server/: main.py
src/cuga/evaluation/: README.md
src/frontend_workspaces/: package.json  pnpm-lock.yaml
src/frontend_workspaces/agentic_chat/: package.json
src/frontend_workspaces/agentic_chat/src/: App.tsx  CardManager.tsx  CustomChat.css  CustomChat.tsx  DebugPanel.tsx  FollowupSuggestions.css  FollowupSuggestions.tsx  LeftSidebar.css  LeftSidebar.tsx  StatusBar.css  StatusBar.tsx  ToolsConfig.tsx  WorkspacePanel.css  WorkspacePanel.tsx  exampleUtterances.ts
src/frontend_workspaces/agentic_chat/src/floating/: stop_button.tsx
src/frontend_workspaces/extension/: package.json
src/frontend_workspaces/extension/releases/chrome-mv3/: background.js
src/scripts/: push-to-hf.sh
src/system_tests/e2e/: load_test.py
tests/unit/: test_plan_controller_prompt.py
