[project]
name = "test-cuga-package-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "cuga",
    "fastmcp",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
cuga = { path = "../../../", editable = true }